Fixed up subheaders and bridgeheads.

--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -8,15 +8,26 @@
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="epigraph" epub:type="epigraph">
 			<h2 epub:type="title">Epigraphs</h2>
-		<p>"But with regard to the material world, we can at least go so far as this—we can perceive that events are brought about not by insulated interpositions of Divine power, exerted in each particular case, but by the establishment of general laws."—Whewell: "Bridgewater Treatise".</p>
-		<p>
-		</p>
-		<p>"The only distinct meaning of the word 'natural' is STATED, FIXED or SETTLED; since what is natural as much requires and presupposes an intelligent agent to render it so, i.e., to effect it continually or at stated times, as what is supernatural or miraculous does to effect it for once."—Butler: "Analogy of Revealed Religion".</p>
-		<p>
-		</p>
-		<p>"To conclude, therefore, let no man out of a weak conceit of sobriety, or an ill-applied moderation, think or maintain, that a man can search too far or be too well studied in the book of God's word, or in the book of God's works; divinity or philosophy; but rather let men endeavour an endless progress or proficience in both."—Bacon: "Advancement of Learning".</p>
-		<p>
-
+			<blockquote>
+				<p>“But with regard to the material world, we can at least go so far as this⁠—we can perceive that events are brought about not by insulated interpositions of Divine power, exerted in each particular case, but by the establishment of general laws.”</p>
+				<footer>
+					<p>—Whewell: <i epub:type="se:name.publication.book">Bridgewater Treatise</i>.</p>
+				</footer>
+			</blockquote>
+			<blockquote>
+				<p>“The only distinct meaning of the word ‘natural’ is <b>stated</b>, <b>fixed</b> or <b>settled</b>; since what is natural as much requires and presupposes an intelligent agent to render it so, i.e., to effect it continually or at stated times, as what is supernatural or miraculous does to effect it for once.”</p>
+				<footer>
+					<p>—Butler: <i epub:type="se:name.publication.book">Analogy of Revealed Religion</i>.</p>
+				</footer>
+			</blockquote>
+			<blockquote>
+				<p>“To conclude, therefore, let no man out of a weak conceit of sobriety, or an ill-applied moderation, think or maintain, that a man can search too far or be too well studied in the book of God’s word, or in the book of God’s works; divinity or philosophy; but rather let men endeavour an endless progress or proficience in both.”</p>
+				<footer>
+					<p>—Bacon: <i epub:type="se:name.publication.book">Advancement of Learning</i>.</p>
+				</footer>
+			</blockquote>
 		</section>
 	</body>
-	</html>
+</html>
+
+
