--- a/src/epub/text/halftitle.xhtml
+++ b/src/epub/text/halftitle.xhtml
@@ -9,8 +9,10 @@
 		<section id="halftitlepage" epub:type="halftitlepage">
 			<h1 epub:type="fulltitle">
 				<span epub:type="title">The Origin of Species by Means of Natural Selection</span>
-				<span epub:type="subtitle">Or, The Preservation of Favoured Races in the Struggle for Life</span>
+				<span epub:type="subtitle">Or, the Preservation of Favoured Races in the Struggle for Life</span>
 			</h1>
 		</section>
 	</body>
 </html>
+
+
