--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -15,7 +15,7 @@
 				</footer>
 			</blockquote>
 			<blockquote>
-				<p>“The only distinct meaning of the word ‘natural’ is <b>stated</b>, <b>fixed</b> or <b>settled</b>; since what is natural as much requires and presupposes an intelligent agent to render it so, i.e., to effect it continually or at stated times, as what is supernatural or miraculous does to effect it for once.”</p>
+				<p>“The only distinct meaning of the word ‘natural’ is <b>stated</b>, <b>fixed</b> or <b>settled</b>; since what is natural as much requires and presupposes an intelligent agent to render it so, <abbr>i.e.</abbr>, to effect it continually or at stated times, as what is supernatural or miraculous does to effect it for once.”</p>
 				<footer>
 					<p>—Butler: <i epub:type="se:name.publication.book">Analogy of Revealed Religion</i>.</p>
 				</footer>
