--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,353 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTERTITLE</a>
+					<a href="text/epigraph.xhtml">Epigraphs</a>
+				</li>
+				<li>
+					<a href="text/preamble.xhtml">An Historical Sketch of the Progress of Opinion on the Origin of Species, Previously to the Publication of the First Edition of This Work</a>
+				</li>
+				<li>
+					<a href="text/introduction.xhtml">Introduction</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml">The Origin of Species by Means of Natural Selection</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Variation Under Domestication</a>
+							<ol>
+								<li>
+									<a href="text/chapter-1.xhtml#chapter-1-1">Causes of Variability</a>
+								</li>
+								<li>
+									<a href="text/chapter-1.xhtml#chapter-1-2">Effects of Habit and of the Use or Disuse of Parts; Correlated Variation; Inheritance</a>
+								</li>
+								<li>
+									<a href="text/chapter-1.xhtml#chapter-1-3">Character of Domestic Varieties; Difficulty of Distinguishing Between Varieties and Species; Origin of Domestic Varieties from One or More Species</a>
+								</li>
+								<li>
+									<a href="text/chapter-1.xhtml#chapter-1-4">Breeds of the Domestic Pigeon, Their Differences and Origin</a>
+								</li>
+								<li>
+									<a href="text/chapter-1.xhtml#chapter-1-5">Principles of Selection Anciently Followed, and Their Effects</a>
+								</li>
+								<li>
+									<a href="text/chapter-1.xhtml#chapter-1-6">Unconscious Selection</a>
+								</li>
+								<li>
+									<a href="text/chapter-1.xhtml#chapter-1-7">Circumstances Favourable to Man’s Power of Selection</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Variation Under Nature</a>
+							<ol>
+								<li>
+									<a href="text/chapter-2.xhtml#chapter-2-1">Individual Differences</a>
+								</li>
+								<li>
+									<a href="text/chapter-2.xhtml#chapter-2-2">Doubtful Species</a>
+								</li>
+								<li>
+									<a href="text/chapter-2.xhtml#chapter-2-3">Wide-Ranging, Much Diffused, and Common Species Vary Most</a>
+								</li>
+								<li>
+									<a href="text/chapter-2.xhtml#chapter-2-4">Species of the Larger Genera in Each Country Vary More Frequently Than the Species of the Smaller Genera</a>
+								</li>
+								<li>
+									<a href="text/chapter-2.xhtml#chapter-2-5">Many of the Species Included Within the Larger Genera Resemble Varieties in Being Very Closely, but Unequally, Related to Each Other, and in Having Restricted Ranges</a>
+								</li>
+								<li>
+									<a href="text/chapter-2.xhtml#chapter-2-6">Summary</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Struggle for Existence</a>
+							<ol>
+								<li>
+									<a href="text/chapter-3.xhtml#chapter-3-1">The Term, Struggle for Existence, Used in a Large Sense</a>
+								</li>
+								<li>
+									<a href="text/chapter-3.xhtml#chapter-3-2">Geometrical Ratio of Increase</a>
+								</li>
+								<li>
+									<a href="text/chapter-3.xhtml#chapter-3-3">Nature of the Checks to Increase</a>
+								</li>
+								<li>
+									<a href="text/chapter-3.xhtml#chapter-3-4">Complex Relations of All Animals and Plants to Each Other in the Struggle for Existence</a>
+								</li>
+								<li>
+									<a href="text/chapter-3.xhtml#chapter-3-5">Struggle for Life Most Severe Between Individuals and Varieties of the Same Species</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Natural Selection; or the Survival of the Fittest</a>
+							<ol>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-1">Sexual Selection</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-2">Illustrations of the Action of Natural Selection, or the Survival of the Fittest</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-3">On the Intercrossing of Individuals</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-4">Circumstances Favourable for the Production of New Forms Through Natural Selection</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-5">Extinction Caused by Natural Selection</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-6">Divergence of Character</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-7">The Probable Effects of the Action of Natural Selection Through Divergence of Character and Extinction, on the Descendants of a Common Ancestor</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-8">On the Degree to Which Organisation Tends to Advance</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-9">Convergence of Character</a>
+								</li>
+								<li>
+									<a href="text/chapter-4.xhtml#chapter-4-10">Summary of Chapter</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Laws of Variation</a>
+							<ol>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-1">Effects of the Increased Use and Disuse of Parts, as Controlled by Natural Selection</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-2">Acclimatisation</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-3">Correlated Variation</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-4">Compensation and Economy of Growth</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-5">Multiple, Rudimentary, and Lowly-Organised Structures Are Variable</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-6">A Part Developed in Any Species in an Extraordinary Degree or Manner, in Comparison with the Same Part in Allied Species, Tends to Be Highly Variable</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-7">Specific Characters More Variable Than Generic Characters</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-8">Secondary Sexual Characters Variable</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-9">Distinct Species Present Analogous Variations, So That a Variety of One Species Often Assumes a Character Proper to an Allied Species, or Reverts to Some of the Characters of an Early Progenitor</a>
+								</li>
+								<li>
+									<a href="text/chapter-5.xhtml#chapter-5-10">Summary</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Difficulties of the Theory</a>
+							<ol>
+								<li>
+									<a href="text/chapter-6.xhtml#chapter-6-1">On the Absence or Rarity of Transitional Varieties</a>
+								</li>
+								<li>
+									<a href="text/chapter-6.xhtml#chapter-6-2">On the Origin and Transition of Organic Beings with Peculiar Habits and Structure</a>
+								</li>
+								<li>
+									<a href="text/chapter-6.xhtml#chapter-6-3">Organs of Extreme Perfection and Complication</a>
+								</li>
+								<li>
+									<a href="text/chapter-6.xhtml#chapter-6-4">Modes of Transition</a>
+								</li>
+								<li>
+									<a href="text/chapter-6.xhtml#chapter-6-5">Special Difficulties of the Theory of Natural Selection</a>
+								</li>
+								<li>
+									<a href="text/chapter-6.xhtml#chapter-6-6">Organs of Little Apparent Importance, as Affected by Natural Selection</a>
+								</li>
+								<li>
+									<a href="text/chapter-6.xhtml#chapter-6-7">Utilitarian Doctrine, How Far True: Beauty, How Acquired</a>
+								</li>
+								<li>
+									<a href="text/chapter-6.xhtml#chapter-6-8">Summary: The Law of Unity of Type and of the Conditions of Existence Embraced by the Theory of Natural Selection</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Miscellaneous Objections to the Theory of Natural Selection</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Instinct</a>
+							<ol>
+								<li>
+									<a href="text/chapter-8.xhtml#chapter-8-1">Inherited Changes of Habit or Instinct in Domesticated Animals</a>
+								</li>
+								<li>
+									<a href="text/chapter-8.xhtml#chapter-8-2">Special Instincts</a>
+								</li>
+								<li>
+									<a href="text/chapter-8.xhtml#chapter-8-3">Instincts of the Cuckoo</a>
+								</li>
+								<li>
+									<a href="text/chapter-8.xhtml#chapter-8-4">Slave-Making Instinct</a>
+								</li>
+								<li>
+									<a href="text/chapter-8.xhtml#chapter-8-5">Cell-Making Instinct of the Hive-Bee</a>
+								</li>
+								<li>
+									<a href="text/chapter-8.xhtml#chapter-8-6">Objections to the Theory of Natural Selection as Applied to Instincts: Neuter and Sterile Insects</a>
+								</li>
+								<li>
+									<a href="text/chapter-8.xhtml#chapter-8-7">Summary</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Hybridism</a>
+							<ol>
+								<li>
+									<a href="text/chapter-9.xhtml#chapter-9-1">Degrees of Sterility</a>
+								</li>
+								<li>
+									<a href="text/chapter-9.xhtml#chapter-9-2">Laws Governing the Sterility of First Crosses and of Hybrids</a>
+								</li>
+								<li>
+									<a href="text/chapter-9.xhtml#chapter-9-3">Origin and Causes of the Sterility of First Crosses and of Hybrids</a>
+								</li>
+								<li>
+									<a href="text/chapter-9.xhtml#chapter-9-4">Reciprocal Dimorphism and Trimorphism</a>
+								</li>
+								<li>
+									<a href="text/chapter-9.xhtml#chapter-9-5">Fertility of Varieties When Crossed, and of Their Mongrel Offspring, Not Universal</a>
+								</li>
+								<li>
+									<a href="text/chapter-9.xhtml#chapter-9-6">Hybrids and Mongrels Compared, Independently of Their Fertility</a>
+								</li>
+								<li>
+									<a href="text/chapter-9.xhtml#chapter-9-7">Summary of Chapter</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: On the Imperfection of the Geological Record</a>
+							<ol>
+								<li>
+									<a href="text/chapter-10.xhtml#chapter-10-1">On the Lapse of Time, as Inferred from the Rate of Deposition and Extent of Denudation</a>
+								</li>
+								<li>
+									<a href="text/chapter-10.xhtml#chapter-10-2">On the Poorness of Palaeontological Collections</a>
+								</li>
+								<li>
+									<a href="text/chapter-10.xhtml#chapter-10-3">On the Absence of Numerous Intermediate Varieties in Any Single Formation</a>
+								</li>
+								<li>
+									<a href="text/chapter-10.xhtml#chapter-10-4">On the Sudden Appearance of Whole Groups of Allied Species</a>
+								</li>
+								<li>
+									<a href="text/chapter-10.xhtml#chapter-10-5">On the Sudden Appearance of Groups of Allied Species in the Lowest Known Fossiliferous Strata</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: On the Geological Succession of Organic Beings</a>
+							<ol>
+								<li>
+									<a href="text/chapter-11.xhtml#chapter-11-1">On Extinction</a>
+								</li>
+								<li>
+									<a href="text/chapter-11.xhtml#chapter-11-2">On the Forms of Life Changing Almost Simultaneously Throughout the World</a>
+								</li>
+								<li>
+									<a href="text/chapter-11.xhtml#chapter-11-3">On the Affinities of Extinct Species to Each Other, and to Living Forms</a>
+								</li>
+								<li>
+									<a href="text/chapter-11.xhtml#chapter-11-4">On the State of Development of Ancient Compared with Living Forms</a>
+								</li>
+								<li>
+									<a href="text/chapter-11.xhtml#chapter-11-5">On the Succession of the Same Types Within the Same Areas, During the Later Tertiary Periods</a>
+								</li>
+								<li>
+									<a href="text/chapter-11.xhtml#chapter-11-6">Summary of the Preceding and Present Chapters</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Geographical Distribution</a>
+							<ol>
+								<li>
+									<a href="text/chapter-12.xhtml#chapter-12-1">Single Centres of Supposed Creation</a>
+								</li>
+								<li>
+									<a href="text/chapter-12.xhtml#chapter-12-2">Means of Dispersal</a>
+								</li>
+								<li>
+									<a href="text/chapter-12.xhtml#chapter-12-3">Dispersal During the Glacial Period</a>
+								</li>
+								<li>
+									<a href="text/chapter-12.xhtml#chapter-12-4">Alternate Glacial Periods in the North and South</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Geographical Distribution⁠—Continued</a>
+							<ol>
+								<li>
+									<a href="text/chapter-13.xhtml#chapter-13-1">Fresh-Water Productions</a>
+								</li>
+								<li>
+									<a href="text/chapter-13.xhtml#chapter-13-2">On the Inhabitants of Oceanic Islands</a>
+								</li>
+								<li>
+									<a href="text/chapter-13.xhtml#chapter-13-3">Absence of Batrachians and Terrestrial Mammals on Oceanic Islands</a>
+								</li>
+								<li>
+									<a href="text/chapter-13.xhtml#chapter-13-4">On the Relations of the Inhabitants of Islands to Those of the Nearest Mainland</a>
+								</li>
+								<li>
+									<a href="text/chapter-13.xhtml#chapter-13-5">Summary of the Last and Present Chapters</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Mutual Affinities of Organic Beings: Morphology⁠—Embryology⁠—Rudimentary Organs⁠—Classification</a>
+							<ol>
+								<li>
+									<a href="text/chapter-14.xhtml#chapter-14-1">Analogical Resemblances</a>
+								</li>
+								<li>
+									<a href="text/chapter-14.xhtml#chapter-14-2">On the Nature of the Affinities Connecting Organic Beings</a>
+								</li>
+								<li>
+									<a href="text/chapter-14.xhtml#chapter-14-3">Morphology</a>
+								</li>
+								<li>
+									<a href="text/chapter-14.xhtml#chapter-14-4">Development and Embryology</a>
+								</li>
+								<li>
+									<a href="text/chapter-14.xhtml#chapter-14-5">Rudimentary, Atrophied, and Aborted Organs</a>
+								</li>
+								<li>
+									<a href="text/chapter-14.xhtml#chapter-14-6">Summary</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: Recapitulation and Conclusion</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+				<a href="text/glossary.xhtml">Glossary of the Principal Scientific Terms Used in the Present Volume</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +380,25 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:nonfiction">WORKTITLE</a>
+					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">Epigraphs</a>
+				</li>
+				<li>
+					<a href="text/preamble.xhtml" epub:type="frontmatter preamble">An Historical Sketch of the Progress of Opinion on the Origin of Species, Previously to the Publication of the First Edition of This Work</a>
+				</li>
+				<li>
+					<a href="text/introduction.xhtml" epub:type="frontmatter introduction">Introduction</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitle">Halftitle</a>
+				</li>
+				<li>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:nonfiction">The Origin of Species</a>
+				</li>
+				<li>
+					<a href="text/glossary.xhtml" epub:type="backmatter glossary">Glossary of the Principal Scientific Terms Used in the Present Volume</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml" epub:type="backmatter rearnotes">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
