Fixed some lint issues.

--- a/src/epub/text/glossary.xhtml
+++ b/src/epub/text/glossary.xhtml
@@ -130,7 +130,7 @@
 			<p><b>Maxillae</b>: in insects, the second or lower pair of jaws, which are composed of several joints and furnished with peculiar jointed appendages called palpi, or feelers.</p>
 			<p><b>Melanism</b>: The opposite of albinism; an undue development of colouring material in the skin and its appendages.</p>
 			<p><b>Metamorphic Rocks</b>: Sedimentary rocks which have undergone alteration, generally by the action of heat, subsequently to their deposition and consolidation.</p>
-			<p><b>Mollusca</b>: One of the great divisions of the animal kingdom, including those animals which have a soft body, usually furnished with a shell, and in which the nervous ganglia, or centres, present no definite general arrangement. They are generally known under the denomination of “shellfish”; the cuttle-fish, and the common snails, whelks, oysters, mussels, and cockles, may serve as examples of them.</p>
+			<p><b>Mollusca</b>: One of the great divisions of the animal kingdom, including those animals which have a soft body, usually furnished with a shell, and in which the nervous ganglia, or centres, present no definite general arrangement. They are generally known under the denomination of “shellfish;” the cuttle-fish, and the common snails, whelks, oysters, mussels, and cockles, may serve as examples of them.</p>
 			<p><b>Monocotyledons</b>, or <b>Monocotyledonous Plants</b>: Plants in which the seed sends up only a single seed-leaf (or cotyledon); characterised by the absence of consecutive layers of wood in the stem (endogenous growth), by the veins of the leaves being generally straight, and by the parts of the flowers being generally in multiples of three. (Examples, grasses, lilies, orchids, palms, <abbr>etc.</abbr>)</p>
 			<p><b>Moraines</b>: The accumulations of fragments of rock brought down by glaciers.</p>
 			<p><b>Morphology</b>: The law of form or structure independent of function.</p>
@@ -236,3 +236,4 @@
 		</section>
 	</body>
 </html>
+
